# gatecheck

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml  requirements.txt
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/gatecheck/: __init__.py  cli.py  models.py  report.py
src/gatecheck/analyzer/: __init__.py  compliance.py  endpoint.py  report_gen.py
src/gatecheck/scanner/: __init__.py  auth.py  exposure.py  injection.py
tests/: test_analyzer.py  test_benchmark.py  test_core.py  test_integration.py  test_models.py  test_scanner.py
