[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "gatecheck"
version = "0.1.0"
description = "API Security Scanner - detect authentication flaws, injection vulnerabilities, and data exposure in REST APIs"
authors = [
    { name = "Mukunda Katta" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
    "httpx>=0.25",
]

[project.scripts]
gatecheck = "gatecheck.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
